v0.5.1:
    - Improved speed of Retry prompt drawing.

v0.5.0:
    - Small documentation updates.
    - Fixed bonus game 1UPs still moving while the Retry prompt is active (only when !prompt_freeze = 2).
    - Implemented sprite status bar that can be enabled with the !sprite_status_bar setting and configured from the settings and the tables in "sprite_status_bar_tables.asm".

v0.4.6:
    - Updated custom midway instructions with more clear guide (thanks to AmperSam for providing them).
    - Fixed occasional respawn issues when using UberASMTool 2.0 Beta.

v0.4.5:
    - Fixed integration with lx5's Custom Powerups (thanks to NixKillsMyths for reporting this):
      - Fixed compilation error when using both Retry and the Custom Powerups.
      - Removed redundant code in "level_init_3.asm" that is already run in the Custom Powerups UberASM.
    - Fixed Sumo Bro's Lightning falling while the Retry prompt is active (only when !prompt_freeze = 2).
    - Added an optional !prompt_cooldown option (set to $10 frames by default) to disable pressing up/down to move the cursor for a given amount of frames after the Retry prompt has opened, to avoid accidental level exits (thanks to AmperSam for the suggestion).
    - Fixed some mode 7 values not being reset by Retry, and added some small optimizations on level load.

v0.4.4:
    - Fixed bug where dying on the same frame as getting a midway would make the music reset (thanks to LouisDoucet for reporting this).
    - Fixed Reappearing Boos fading in and out while the Retry prompt is active (only when !prompt_freeze = 2).
    - Fixed game crash that happened when using !prompt_freeze = 0 and dying shortly after hitting a message box.
    - Fixed vanilla autoscrollers still running when dying with !prompt_freeze = 0 (thanks to Mega for reporting this).
    - Fixed compilation error when setting !use_custom_midway_bar = 0 (thanks to MarioFanGamer for reporting this).